--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -51,7 +51,10 @@
                 <div class="product-info">
                     <h4><a href="{{ url_for('product.view', product_id=product.id) }}">{{ product.name }}</a></h4>
                     <p class="product-price">₽{{ product.price | int }}</p>
-                    <a href="{{ url_for('main.add_to_cart', product_id=product.id) }}" class="btn btn-primary w-100">В корзину</a>
+                    <form action="{{ url_for('main.add_to_cart', product_id=product.id) }}" method="post" class="d-inline">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+                        <button type="submit" class="btn btn-primary w-100">В корзину</button>
+                    </form>
                 </div>
             </div>
             {% endfor %}
